# gastown-rusted

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  install.sh
.github/workflows/: release.yml
crates/gtr-cli/: Cargo.toml  build.rs
crates/gtr-cli/src/: client.rs  main.rs
crates/gtr-cli/src/commands/: agents.rs  attach.rs  chat.rs  checkpoint.rs  convoy.rs  crew.rs  diagnostics.rs  doctor.rs  dog.rs  done.rs  down.rs  escalate.rs  feed.rs  formula.rs  gate.rs  handoff.rs  hook.rs  install.rs  mail.rs  mayor.rs  mod.rs  mol.rs  mq.rs  polecat.rs  prime.rs  rig.rs  services.rs  session.rs  sessions.rs  sling.rs  start.rs  status.rs  stop.rs  unsling.rs  up.rs  work.rs  worker.rs  workspace.rs
crates/gtr-core/: Cargo.toml
crates/gtr-core/src/: checkpoint.rs  config.rs  dirs.rs  errors.rs  formula.rs  ids.rs  lib.rs  namepool.rs  plugin.rs  state.rs  types.rs
crates/gtr-temporal/: Cargo.toml
crates/gtr-temporal/src/: activities.rs  lib.rs  pty.rs  signals.rs  worker.rs  workflows.rs
crates/gtr-temporal/src/activities/: agent_io.rs  discover_session.rs  git_ops.rs  heartbeat.rs  mod.rs  notification.rs  run_plugin.rs  spawn_agent.rs
crates/gtr-temporal/src/workflows/: agent.rs  boot.rs  convoy.rs  dog.rs  formula.rs  gate.rs  mayor.rs  mod.rs  molecule.rs  patrol.rs  polecat.rs  refinery.rs  rig.rs  witness.rs  work_item.rs
crates/gtr-temporal/tests/: integration.rs
docs/plans/: 2026-02-12-gtr-implementation-plan.md  2026-02-12-gtr-rust-temporal-design.md  2026-02-13-hello-world-temporal-workflow.md  2026-02-14-gtr-phase2-implementation-plan.md  2026-02-14-gtr-phase3-design.md  2026-02-14-gtr-phase3-implementation-plan.md  2026-02-21-installer-design.md  2026-02-21-installer-implementation-plan.md
infrastructure/temporal/dynamicconfig/: development-sql.yaml
tests/: mock-agent.sh
