[package]
name = "gtr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gtr"
path = "src/main.rs"

[dependencies]
gtr-core = { path = "../gtr-core" }
gtr-temporal = { path = "../gtr-temporal" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.8"
tokio = { workspace = true }
