[package]
name = "gtr-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"
nanoid = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
