[package]
name = "gtr-temporal"
version.workspace = true
edition.workspace = true

[dependencies]
gtr-core = { path = "../gtr-core" }
temporalio-sdk = { workspace = true }
temporalio-sdk-core = { workspace = true }
temporalio-client = { workspace = true }
temporalio-common = { workspace = true }
anyhow = "1"
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures-util = { version = "0.3", default-features = false }
git2 = "0.19"
